All pages - the account settings drop down on the top right corner needs to be above everything - Right now it is below / covered by some items. - FIXED

--- a/css/all.css
+++ b/css/all.css
@@ -202,6 +202,7 @@ input[type="text"], input[type="submit"], input[type="email"], input[type="numbe
 	left: -117px;
 	font: 14px/18px 'Lato', sans-serif, Arial, Helvetica, sans-serif;
 	display: none;
+	z-index: 40000;
 }
 .setting-area:after {
 	content: '';
